Commiting some code

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -68,11 +68,11 @@
                 <label for="checklistall1"> ChecklistAll</label><br>
             </td>
             <td>
-                <input type="checkbox" id="checklistall1" name="CheckboxData.Email" value="true" onclick="selectAllEmailCheckboxes();">
+                <input  type="checkbox" id="checklistall1" name="model.Email" value="true" onclick="selectAllEmailCheckboxes();">
                 <label for="checklistall1"> Email</label>
             </td>
             <td>
-                <input type="checkbox" id="checlistall2" name="CheckboxData.Whatsapp" value="true" onclick="selectAllWaCheckboxes();">
+                <input type="checkbox" id="checlistall2" name="model.Whatsapp" value="true" onclick="selectAllWaCheckboxes();">
                 <label for="checlistall2">Whatsapp</label>
             </td>
         </tr>
@@ -81,10 +81,10 @@
                 <label for="wd1"> Withdrawl</label><br>
             </td>
             <td>
-                <input type="checkbox" id="wd1" name="CheckboxData.Withdrawl" class="email" value="true">
+                <input type="checkbox" id="wd1" name="model.Withdrawl" class="email" value="true">
             </td>
             <td>
-                <input type="checkbox" id="wd2" name="CheckboxData.WithdrawlWA" class="wa" value="true">
+                <input type="checkbox" id="wd2" name="model.WithdrawlWA" class="wa" value="true">
             </td>
         </tr>
 
@@ -93,10 +93,10 @@
                 <label for="frgtPwd"> Forgot Password</label><br>
             </td>
             <td>
-                <input type="checkbox" id="frgtPwd" name="CheckboxData.ForgotPassword" class="email" value="true">
+                <input type="checkbox" id="frgtPwd" name="model.ForgotPassword" class="email" value="true">
             </td>
             <td>
-                <input type="checkbox" id="frgtPwd1" name="CheckboxData.ForgotPasswordWA" class = "wa"value="true">
+                <input type="checkbox" id="frgtPwd1" name="model.ForgotPasswordWA" class = "wa"value="true">
             </td>
         </tr>
         <tr>
@@ -104,10 +104,10 @@
                 <label for="rstpwd"> Reset Password</label><br>
             </td>
             <td>
-                <input type="checkbox" id="rstpwd" name="CheckboxData.ResetPassword" class="email" value="true">
+                <input type="checkbox" id="rstpwd" name="model.ResetPassword" class="email" value="true">
             </td>
             <td>
-                <input type="checkbox" id="rstpwd1" name="CheckboxData.ResetPassword" class="wa" value="true">
+                <input type="checkbox" id="rstpwd1" name="model.ResetPassword" class="wa" value="true">
             </td>
         </tr>
     </table>
